# rocket_csrf_guard

./: .gitignore  Cargo.toml  README.md  Rocket.toml
private/: cert.pem  generate_certs.sh  key.pem
rocket_csrf_guard/: Cargo.toml
rocket_csrf_guard/examples/: derive_custom_field_name.rs  derive_custom_specified_field_name.rs  derive_multiple_lifetimes.rs  derive_simple.rs  derive_single_lifetime.rs  derive_specify_field.rs  end_to_end.rs
rocket_csrf_guard/src/: cookie.rs  example_app.rs  form.rs  header.rs  lib.rs  proof.rs  tests.rs  token.rs  util.rs  verifier.rs
rocket_csrf_guard/src/expand_snapshots/: derive_custom_field_name.rs  derive_custom_specified_field_name.rs  derive_multiple_lifetimes.rs  derive_simple.rs  derive_single_lifetime.rs  derive_specify_field.rs
rocket_csrf_guard_derive/: Cargo.toml
rocket_csrf_guard_derive/src/: lib.rs
templates/: loggedin.html.tera  login.html.tera
