[workspace]

resolver = "2"

members = [
    "rocket_csrf_guard_derive",
    "rocket_csrf_guard",
    "examples/*",
]

[workspace.package]
version = "0.0.1"

[workspace.dependencies]
async-trait = "0.1"
anyhow = "1.0"
base64 = "0.13"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
rocket = { version = "0.5.0-rc.3", features = [ "json", "secrets", "tls"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
serde = "1.0"
serde_derive = "1.0"
syn = {version = "1.0", features = ["full", "extra-traits", "printing"]}
thiserror = "1.0"