[package]
name = "rocket_csrf_guard"
version.workspace = true
edition = "2021"
authors = ["Hasnain Lakhani <m.hasnain.lakhani@gmail.com>"]
categories = ["web-programming"]
description = "Ergonomic CSRF protection for Rocket applications"
keywords = ["csrf", "rocket"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mhlakhani/rocket_csrf_guard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
base64.workspace = true
rand.workspace = true
rocket.workspace = true
serde.workspace = true
thiserror.workspace = true
# rocket_csrf_guard_derive = { path = "../rocket_csrf_guard_derive" }
rocket_csrf_guard_derive = "0.0.1"

[dev-dependencies]
console.workspace = true
hex.workspace = true
mini-moka.workspace = true
rocket_dyn_templates.workspace = true
sha3.workspace = true
similar.workspace = true

[[example]]
name = "end_to_end"
doc-scrape-examples = true